message/generation/swift-mt-generation/repository/SR2018/parsers/SwiftMtParser_MT102Parser.cpp

#include "repository/ISwiftMtParser.h"
#include "SwiftMtMessage.pb.h"
#include <vector>
#include <string>
#include "BaseErrorListener.h"
#include "SwiftMtParser_MT102Lexer.h"


// Generated from C:/programming/message-converter-c/message/generation/swift-mt-generation/repository/SR2018/grammars/SwiftMtParser_MT102.g4 by ANTLR 4.7.2


#include "SwiftMtParser_MT102Listener.h"

#include "SwiftMtParser_MT102Parser.h"


using namespace antlrcpp;
using namespace message::definition::swift::mt::parsers::sr2018;
using namespace antlr4;

SwiftMtParser_MT102Parser::SwiftMtParser_MT102Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SwiftMtParser_MT102Parser::~SwiftMtParser_MT102Parser() {
  delete _interpreter;
}

std::string SwiftMtParser_MT102Parser::getGrammarFileName() const {
  return "SwiftMtParser_MT102.g4";
}

const std::vector<std::string>& SwiftMtParser_MT102Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SwiftMtParser_MT102Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- MessageContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::MessageContext::MessageContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SwiftMtParser_MT102Parser::BhContext* SwiftMtParser_MT102Parser::MessageContext::bh() {
  return getRuleContext<SwiftMtParser_MT102Parser::BhContext>(0);
}

SwiftMtParser_MT102Parser::AhContext* SwiftMtParser_MT102Parser::MessageContext::ah() {
  return getRuleContext<SwiftMtParser_MT102Parser::AhContext>(0);
}

SwiftMtParser_MT102Parser::MtContext* SwiftMtParser_MT102Parser::MessageContext::mt() {
  return getRuleContext<SwiftMtParser_MT102Parser::MtContext>(0);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::MessageContext::EOF() {
  return getToken(SwiftMtParser_MT102Parser::EOF, 0);
}

SwiftMtParser_MT102Parser::UhContext* SwiftMtParser_MT102Parser::MessageContext::uh() {
  return getRuleContext<SwiftMtParser_MT102Parser::UhContext>(0);
}

SwiftMtParser_MT102Parser::TrContext* SwiftMtParser_MT102Parser::MessageContext::tr() {
  return getRuleContext<SwiftMtParser_MT102Parser::TrContext>(0);
}


size_t SwiftMtParser_MT102Parser::MessageContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleMessage;
}

void SwiftMtParser_MT102Parser::MessageContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMessage(this);
}

void SwiftMtParser_MT102Parser::MessageContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMessage(this);
}

SwiftMtParser_MT102Parser::MessageContext* SwiftMtParser_MT102Parser::message() {
  MessageContext *_localctx = _tracker.createInstance<MessageContext>(_ctx, getState());
  enterRule(_localctx, 0, SwiftMtParser_MT102Parser::RuleMessage);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(24);
    bh();
    setState(25);
    ah();
    setState(27);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SwiftMtParser_MT102Parser::TAG_UH) {
      setState(26);
      uh();
    }
    setState(29);
    mt();
    setState(31);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SwiftMtParser_MT102Parser::TAG_TR) {
      setState(30);
      tr();
    }
    setState(33);
    match(SwiftMtParser_MT102Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BhContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::BhContext::BhContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwiftMtParser_MT102Parser::BhContext::TAG_BH() {
  return getToken(SwiftMtParser_MT102Parser::TAG_BH, 0);
}

SwiftMtParser_MT102Parser::Bh_contentContext* SwiftMtParser_MT102Parser::BhContext::bh_content() {
  return getRuleContext<SwiftMtParser_MT102Parser::Bh_contentContext>(0);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::BhContext::RBRACE() {
  return getToken(SwiftMtParser_MT102Parser::RBRACE, 0);
}


size_t SwiftMtParser_MT102Parser::BhContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleBh;
}

void SwiftMtParser_MT102Parser::BhContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBh(this);
}

void SwiftMtParser_MT102Parser::BhContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBh(this);
}

SwiftMtParser_MT102Parser::BhContext* SwiftMtParser_MT102Parser::bh() {
  BhContext *_localctx = _tracker.createInstance<BhContext>(_ctx, getState());
  enterRule(_localctx, 2, SwiftMtParser_MT102Parser::RuleBh);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    match(SwiftMtParser_MT102Parser::TAG_BH);
    setState(36);
    bh_content();
    setState(37);
    match(SwiftMtParser_MT102Parser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Bh_contentContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::Bh_contentContext::Bh_contentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SwiftMtParser_MT102Parser::Bh_contentContext::RBRACE() {
  return getTokens(SwiftMtParser_MT102Parser::RBRACE);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::Bh_contentContext::RBRACE(size_t i) {
  return getToken(SwiftMtParser_MT102Parser::RBRACE, i);
}


size_t SwiftMtParser_MT102Parser::Bh_contentContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleBh_content;
}

void SwiftMtParser_MT102Parser::Bh_contentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBh_content(this);
}

void SwiftMtParser_MT102Parser::Bh_contentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBh_content(this);
}

SwiftMtParser_MT102Parser::Bh_contentContext* SwiftMtParser_MT102Parser::bh_content() {
  Bh_contentContext *_localctx = _tracker.createInstance<Bh_contentContext>(_ctx, getState());
  enterRule(_localctx, 4, SwiftMtParser_MT102Parser::RuleBh_content);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(39);
      _la = _input->LA(1);
      if (_la == 0 || _la == Token::EOF || (_la == SwiftMtParser_MT102Parser::RBRACE)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(42); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SwiftMtParser_MT102Parser::TAG_BH)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_AH)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_UH)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_MT)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_TR)
      | (1ULL << SwiftMtParser_MT102Parser::MT_END)
      | (1ULL << SwiftMtParser_MT102Parser::LBRACE)
      | (1ULL << SwiftMtParser_MT102Parser::COLON)
      | (1ULL << SwiftMtParser_MT102Parser::START_OF_FIELD)
      | (1ULL << SwiftMtParser_MT102Parser::ANY))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AhContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::AhContext::AhContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwiftMtParser_MT102Parser::AhContext::TAG_AH() {
  return getToken(SwiftMtParser_MT102Parser::TAG_AH, 0);
}

SwiftMtParser_MT102Parser::Ah_contentContext* SwiftMtParser_MT102Parser::AhContext::ah_content() {
  return getRuleContext<SwiftMtParser_MT102Parser::Ah_contentContext>(0);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::AhContext::RBRACE() {
  return getToken(SwiftMtParser_MT102Parser::RBRACE, 0);
}


size_t SwiftMtParser_MT102Parser::AhContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleAh;
}

void SwiftMtParser_MT102Parser::AhContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAh(this);
}

void SwiftMtParser_MT102Parser::AhContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAh(this);
}

SwiftMtParser_MT102Parser::AhContext* SwiftMtParser_MT102Parser::ah() {
  AhContext *_localctx = _tracker.createInstance<AhContext>(_ctx, getState());
  enterRule(_localctx, 6, SwiftMtParser_MT102Parser::RuleAh);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    match(SwiftMtParser_MT102Parser::TAG_AH);
    setState(45);
    ah_content();
    setState(46);
    match(SwiftMtParser_MT102Parser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Ah_contentContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::Ah_contentContext::Ah_contentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SwiftMtParser_MT102Parser::Ah_contentContext::RBRACE() {
  return getTokens(SwiftMtParser_MT102Parser::RBRACE);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::Ah_contentContext::RBRACE(size_t i) {
  return getToken(SwiftMtParser_MT102Parser::RBRACE, i);
}


size_t SwiftMtParser_MT102Parser::Ah_contentContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleAh_content;
}

void SwiftMtParser_MT102Parser::Ah_contentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAh_content(this);
}

void SwiftMtParser_MT102Parser::Ah_contentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAh_content(this);
}

SwiftMtParser_MT102Parser::Ah_contentContext* SwiftMtParser_MT102Parser::ah_content() {
  Ah_contentContext *_localctx = _tracker.createInstance<Ah_contentContext>(_ctx, getState());
  enterRule(_localctx, 8, SwiftMtParser_MT102Parser::RuleAh_content);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(48);
      _la = _input->LA(1);
      if (_la == 0 || _la == Token::EOF || (_la == SwiftMtParser_MT102Parser::RBRACE)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(51); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SwiftMtParser_MT102Parser::TAG_BH)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_AH)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_UH)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_MT)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_TR)
      | (1ULL << SwiftMtParser_MT102Parser::MT_END)
      | (1ULL << SwiftMtParser_MT102Parser::LBRACE)
      | (1ULL << SwiftMtParser_MT102Parser::COLON)
      | (1ULL << SwiftMtParser_MT102Parser::START_OF_FIELD)
      | (1ULL << SwiftMtParser_MT102Parser::ANY))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UhContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::UhContext::UhContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwiftMtParser_MT102Parser::UhContext::TAG_UH() {
  return getToken(SwiftMtParser_MT102Parser::TAG_UH, 0);
}

SwiftMtParser_MT102Parser::Sys_blockContext* SwiftMtParser_MT102Parser::UhContext::sys_block() {
  return getRuleContext<SwiftMtParser_MT102Parser::Sys_blockContext>(0);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::UhContext::RBRACE() {
  return getToken(SwiftMtParser_MT102Parser::RBRACE, 0);
}


size_t SwiftMtParser_MT102Parser::UhContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleUh;
}

void SwiftMtParser_MT102Parser::UhContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUh(this);
}

void SwiftMtParser_MT102Parser::UhContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUh(this);
}

SwiftMtParser_MT102Parser::UhContext* SwiftMtParser_MT102Parser::uh() {
  UhContext *_localctx = _tracker.createInstance<UhContext>(_ctx, getState());
  enterRule(_localctx, 10, SwiftMtParser_MT102Parser::RuleUh);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(53);
    match(SwiftMtParser_MT102Parser::TAG_UH);
    setState(54);
    sys_block();
    setState(55);
    match(SwiftMtParser_MT102Parser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TrContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::TrContext::TrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwiftMtParser_MT102Parser::TrContext::TAG_TR() {
  return getToken(SwiftMtParser_MT102Parser::TAG_TR, 0);
}

SwiftMtParser_MT102Parser::Sys_blockContext* SwiftMtParser_MT102Parser::TrContext::sys_block() {
  return getRuleContext<SwiftMtParser_MT102Parser::Sys_blockContext>(0);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::TrContext::RBRACE() {
  return getToken(SwiftMtParser_MT102Parser::RBRACE, 0);
}


size_t SwiftMtParser_MT102Parser::TrContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleTr;
}

void SwiftMtParser_MT102Parser::TrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTr(this);
}

void SwiftMtParser_MT102Parser::TrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTr(this);
}

SwiftMtParser_MT102Parser::TrContext* SwiftMtParser_MT102Parser::tr() {
  TrContext *_localctx = _tracker.createInstance<TrContext>(_ctx, getState());
  enterRule(_localctx, 12, SwiftMtParser_MT102Parser::RuleTr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(SwiftMtParser_MT102Parser::TAG_TR);
    setState(58);
    sys_block();
    setState(59);
    match(SwiftMtParser_MT102Parser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sys_blockContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::Sys_blockContext::Sys_blockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SwiftMtParser_MT102Parser::Sys_elementContext *> SwiftMtParser_MT102Parser::Sys_blockContext::sys_element() {
  return getRuleContexts<SwiftMtParser_MT102Parser::Sys_elementContext>();
}

SwiftMtParser_MT102Parser::Sys_elementContext* SwiftMtParser_MT102Parser::Sys_blockContext::sys_element(size_t i) {
  return getRuleContext<SwiftMtParser_MT102Parser::Sys_elementContext>(i);
}


size_t SwiftMtParser_MT102Parser::Sys_blockContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleSys_block;
}

void SwiftMtParser_MT102Parser::Sys_blockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSys_block(this);
}

void SwiftMtParser_MT102Parser::Sys_blockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSys_block(this);
}

SwiftMtParser_MT102Parser::Sys_blockContext* SwiftMtParser_MT102Parser::sys_block() {
  Sys_blockContext *_localctx = _tracker.createInstance<Sys_blockContext>(_ctx, getState());
  enterRule(_localctx, 14, SwiftMtParser_MT102Parser::RuleSys_block);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(62); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(61);
      sys_element();
      setState(64); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SwiftMtParser_MT102Parser::LBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sys_elementContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::Sys_elementContext::Sys_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SwiftMtParser_MT102Parser::Sys_elementContext::LBRACE() {
  return getToken(SwiftMtParser_MT102Parser::LBRACE, 0);
}

SwiftMtParser_MT102Parser::Sys_element_keyContext* SwiftMtParser_MT102Parser::Sys_elementContext::sys_element_key() {
  return getRuleContext<SwiftMtParser_MT102Parser::Sys_element_keyContext>(0);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::Sys_elementContext::COLON() {
  return getToken(SwiftMtParser_MT102Parser::COLON, 0);
}

SwiftMtParser_MT102Parser::Sys_element_contentContext* SwiftMtParser_MT102Parser::Sys_elementContext::sys_element_content() {
  return getRuleContext<SwiftMtParser_MT102Parser::Sys_element_contentContext>(0);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::Sys_elementContext::RBRACE() {
  return getToken(SwiftMtParser_MT102Parser::RBRACE, 0);
}


size_t SwiftMtParser_MT102Parser::Sys_elementContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleSys_element;
}

void SwiftMtParser_MT102Parser::Sys_elementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSys_element(this);
}

void SwiftMtParser_MT102Parser::Sys_elementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSys_element(this);
}

SwiftMtParser_MT102Parser::Sys_elementContext* SwiftMtParser_MT102Parser::sys_element() {
  Sys_elementContext *_localctx = _tracker.createInstance<Sys_elementContext>(_ctx, getState());
  enterRule(_localctx, 16, SwiftMtParser_MT102Parser::RuleSys_element);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(SwiftMtParser_MT102Parser::LBRACE);
    setState(67);
    sys_element_key();
    setState(68);
    match(SwiftMtParser_MT102Parser::COLON);
    setState(69);
    sys_element_content();
    setState(70);
    match(SwiftMtParser_MT102Parser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sys_element_keyContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::Sys_element_keyContext::Sys_element_keyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SwiftMtParser_MT102Parser::Sys_element_keyContext::COLON() {
  return getTokens(SwiftMtParser_MT102Parser::COLON);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::Sys_element_keyContext::COLON(size_t i) {
  return getToken(SwiftMtParser_MT102Parser::COLON, i);
}

std::vector<tree::TerminalNode *> SwiftMtParser_MT102Parser::Sys_element_keyContext::RBRACE() {
  return getTokens(SwiftMtParser_MT102Parser::RBRACE);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::Sys_element_keyContext::RBRACE(size_t i) {
  return getToken(SwiftMtParser_MT102Parser::RBRACE, i);
}


size_t SwiftMtParser_MT102Parser::Sys_element_keyContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleSys_element_key;
}

void SwiftMtParser_MT102Parser::Sys_element_keyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSys_element_key(this);
}

void SwiftMtParser_MT102Parser::Sys_element_keyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSys_element_key(this);
}

SwiftMtParser_MT102Parser::Sys_element_keyContext* SwiftMtParser_MT102Parser::sys_element_key() {
  Sys_element_keyContext *_localctx = _tracker.createInstance<Sys_element_keyContext>(_ctx, getState());
  enterRule(_localctx, 18, SwiftMtParser_MT102Parser::RuleSys_element_key);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(72);
      _la = _input->LA(1);
      if (_la == 0 || _la == Token::EOF || (_la == SwiftMtParser_MT102Parser::RBRACE

      || _la == SwiftMtParser_MT102Parser::COLON)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(75); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SwiftMtParser_MT102Parser::TAG_BH)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_AH)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_UH)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_MT)
      | (1ULL << SwiftMtParser_MT102Parser::TAG_TR)
      | (1ULL << SwiftMtParser_MT102Parser::MT_END)
      | (1ULL << SwiftMtParser_MT102Parser::LBRACE)
      | (1ULL << SwiftMtParser_MT102Parser::START_OF_FIELD)
      | (1ULL << SwiftMtParser_MT102Parser::ANY))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Sys_element_contentContext ------------------------------------------------------------------

SwiftMtParser_MT102Parser::Sys_element_contentContext::Sys_element_contentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SwiftMtParser_MT102Parser::Sys_element_contentContext::RBRACE() {
  return getTokens(SwiftMtParser_MT102Parser::RBRACE);
}

tree::TerminalNode* SwiftMtParser_MT102Parser::Sys_element_contentContext::RBRACE(size_t i) {
  return getToken(SwiftMtParser_MT102Parser::RBRACE, i);
}


size_t SwiftMtParser_MT102Parser::Sys_element_contentContext::getRuleIndex() const {
  return SwiftMtParser_MT102Parser::RuleSys_element_content;
}

void SwiftMtParser_MT102Parser::Sys_element_contentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SwiftMtParser_MT102Listener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSys_element_content(this);
}
